# UDM

./: .gitignore  .project  Build.txt  CHANGELOG.txt  Linux_build.txt  MACOS_build.txt  Makefile.OSX  Makefile.OSX.incl  Makefile.am  NuGet.Config  UDM_Release_Howto.txt  UDM_compile_guide.txt  UDM_compile_guideVS2008.txt  Udm-vc140.autopkg  Udm-vc141.autopkg  Udm.autopkg  Udm.props  Udm_x64.props  appveyor.yml  configure.ac  license.rtf  license.txt  make.msbuild  readme.txt  readmeVS2005.txt  releaseinfo.txt  releaseinfoVS2005.txt  releaseinfoVS2008.txt
WiX/: Udm.wxs  (+6 more)
judm/: .classpath  .project  Makefile.OSX  Makefile.am  build.xml  build_dependencies.vsd
judm/doc/: DSM and DDD tutorial.doc  Makefile.am
judm/etc/: MANIFEST.MF  Makefile.am  judmhelper.bat  runtests.cmd  runtests.sh
judm/samples/: Makefile.am
judm/src/: Makefile.am
lib/: Makefile.OSX  Makefile.am  UdmPython.py
rpm/: Makefile.am  udm.spec.in
samples/CreateLampModel/: CreateLampModel.cpp  CreateLampModel.rc  CreateLampModel.vcproj  CreateLampModelVS2005.vcproj  CreateLampModelVS2008.vcproj  LampDiagramGME.xme  LampDiagramUML.xme  Makefile.OSX  Makefile.am  Makefile.sample.in
samples/cross_links/: CL.udm  CL.xme  CL_export.xml  CL_export_udm.xml  Makefile.OSX  Makefile.am  Makefile.sample.in  cross_links.cpp  cross_links.dsp  cross_links.dsw  cross_links.vcproj  cross_linksVS2005.vcproj  cross_linksVS2008.vcproj
src/Udm/: ChangeLog.txt  ClassGen.cpp  DiagramGen.cpp  Makefile.OSX  Makefile.am  NamespaceGen.cpp  Udm.cpp  Udm.h  Udm.vcproj  UdmCS.cpp  UdmCorbaCppH.cpp  UdmCpp.cpp  UdmCppH.cpp  UdmH.cpp  UdmMetaCpp.cpp  UdmUtil.cpp  UdmVS2005.vcproj  UdmVS2008.vcproj
src/UdmBase/: DTDGen.cpp  DTDGen.h  Makefile.OSX  Makefile.am  Project.cpp  UdmBase.cpp  UdmBase.vcproj  UdmBaseVS2005.vcproj  UdmBaseVS2008.vcproj  UdmProject.cpp  UdmProject_xsd.h  UdmStatic.cpp  UdmTomi.cpp  UmlExt.cpp  cint_string.cpp  readme.txt
src/UdmSwig/: Makefile.OSX  Makefile.am  UdmSwig.i  UdmSwig.vcproj  UdmSwig.vcproj.vspscc  UdmSwigMain.cpp  UdmSwigVS2005.vcproj  UdmSwigVS2008.vcproj
tests/: Makefile.OSX  Makefile.am  UdmTest.h  UdmTests.sln  UdmTestsAll.vcproj  UdmTestsAllVS2005.vcproj  UdmTestsAllVS2008.vcproj  UdmTestsVS2005.sln  UdmTestsVS2008.sln
tests/testGetAdjacentObjects/: Makefile.OSX  Makefile.am  ReadMe.txt  TestGetAdjacentObjects.cpp  TestGetAdjacentObjects.h  main.cpp  testAssociationScenarios.xme  testGetAdjacentObjects.sln  testGetAdjacentObjects.vcproj  testGetAdjacentObjectsVS2005.vcproj  testGetAdjacentObjectsVS2008.vcproj
tests/testOCL/: Makefile.OSX  Makefile.am  SBML2_uml.xme  Test.cpp  Test.h  main.cpp  testOCL.sln  testOCL.vcproj  testOCL.vcproj.vspscc  testOCLVS2005.vcproj  testOCLVS2008.vcproj  versionCheck.xml
tests/testUdmCint/: GeneTF_uml.xme  Makefile.OSX  Makefile.am  SBML2Ex_uml.xme  Test.h  main.cpp  testReadSBML2Ex.cpp  testUdmCint.sln  testUdmCint.vcproj  testUdmCint.vcproj.vspscc  testUdmCintVS2005.vcproj  testUdmCintVS2008.vcproj  versionCheck.xml
tests/test_UdmPython/: Makefile.OSX  UdmDll_VS10.lib.3.2.12.exports  UdmPythonTest.xml  UdmPythonTestMeta.mga  UdmPythonTestMeta.xme  UdmPythonTestMeta.xml  UdmPythonTestMeta.xmp  UdmPythonTestMeta_uml.mga  UdmPythonTestModel.mga  UdmPythonTestModel.xme  test_UdmPython_models.sln  test_UdmPython_models.vcxproj  test_UdmPython_models.vcxproj.filters  udm_python_test.py
tests/test_UdmPythonDS/: Makefile.OSX  test.py
tests/test_assocInheritanceMGA/: AssociationInheritanceTest.cpp  AssociationInheritanceTest.h  SignalFlow_meta.xme  SignalFlow_uml.xme  SingalFlow_uml.xme  TestSignalFlow.vcproj  TestSignalFlow.vcproj.vspscc  TestSignalFlowVS2005.vcproj  TestSignalFlowVS2008.vcproj  main.cpp  sf1.xme
tests/test_childrenorder/: Makefile.OSX  Makefile.am  childrenorderTest.cpp  childrenorderTest.h  resource.h  test_childrenorder.cpp  test_childrenorder.vcproj  test_childrenorderVS2005.vcproj  test_childrenorderVS2008.vcproj
tests/test_cintstring/: Makefile.OSX  Makefile.am  cintstringTest.cpp  cintstringTest.h  test_cintstring.cpp  test_cintstring.vcproj  test_cintstringVS2005.vcproj  test_cintstringVS2008.vcproj
tests/test_cintudmpseudo/: Makefile.OSX  cintUdmPseudoTest.cpp  cintUdmPseudoTest.h  cintUdmPseudoTest.rc  resource.h  test_cintudmpseudo.cpp  test_cintudmpseudo.vcproj  test_cintudmpseudo.vcproj.vspscc
tests/test_crosslinks/: CrossLinkTester.cpp  CrossLinkTester.h  Makefile.OSX  Makefile.am  Test_CrossLinks.vcproj  Test_CrossLinks.vcproj.vspscc  Test_CrossLinksVS2005.vcproj  Test_CrossLinksVS2008.vcproj  test_CrossLinks.cpp
tests/test_domstringdn/: Makefile.OSX  Makefile.am  domstringdnTest.cpp  domstringdnTest.h  test_domstringdn.cpp  test_domstringdn.vcproj  test_domstringdnVS2005.vcproj  test_domstringdnVS2008.vcproj
tests/test_generic/: Makefile.OSX  Makefile.am  genericTest.cpp  genericTest.h  genericTest.rc  test_generic.cpp  test_generic.vcproj  test_genericVS2005.vcproj  test_genericVS2008.vcproj
tests/test_generic2/: Makefile.OSX  Makefile.am  genericTest.cpp  genericTest.h  genericTest.rc  resource.h  test_generic.cpp  test_generic2.vcproj  test_generic2VS2005.vcproj  test_generic2VS2008.vcproj
tests/test_libs/: LibsTest.cpp  LibsTest.h  Makefile.OSX  Makefile.am  main.cpp  test_libs.vcproj  test_libsVS2005.vcproj  test_libsVS2008.vcproj
tests/test_ns/: Makefile.OSX  Makefile.am  main.cpp  test_ns.vcproj  test_ns.vcproj.vspscc  test_nsVS2005.vcproj  test_nsVS2008.vcproj  test_ns_test.cpp  test_ns_uml.xme
tests/test_ns2/: AMeta.xme  BMeta.xme  CHost.xme  CHost_uml.xme  Makefile.OSX  main.cpp  test_ns2.vcproj  test_ns2VS2005.vcproj  test_ns2VS2008.vcproj
tests/test_ns_nested/: MetaLevel1.xme  MetaLevel2.xme  MetaLevel3.xme  MetaLevel3_uml.xme  test_ns_nested.cpp
tests/test_refports/: Makefile.OSX  Makefile.am  RefPortGme.xme  RefPortUml.xme  RefPortsTest.cpp  RefPortsTest.h  main.cpp
tests/test_simpleudmops/: LampTest.cpp  LampTest.vcproj  LampTestVS2005.vcproj  LampTestVS2008.vcproj  Makefile.OSX  Makefile.am  UDMTest.cpp  UDMTest.h
tests/test_staticleaks/: main.cpp  test_staticleaks.cpp
(+993 files in other folders)
