## Makefile.am -- Process this file with automake to produce Makefile.in

SUBDIRS = test_childrenorder test_cintstring test_domstringdn \
	  test_generic test_generic2 test_libs test_ns test_crosslinks \
	  testGetAdjacentObjects test_refports test_simpleudmops \
	  testUdmCint

if ! NO_ANTLR
SUBDIRS += testOCL
endif