## Makefile.am -- Process this file with automake to produce Makefile.in

EXTRA_DIST	= GeneTF/ETC/MANIFEST.MF \
		GeneTF/meta/GeneTF.JPG \
		GeneTF/samples \
		GeneTF/src/test \
		GeneTRE/ETC/MANIFEST.MF \
		GeneTRE/meta/GeneTRE.JPG \
		GeneTRE/samples \
		GeneTRE/src/test \
		SBML2Ex/ETC/MANIFEST.MF \
		SBML2Ex/samples \
		SBML2Ex/src/test \
		TimeSeries/ETC/MANIFEST.MF \
		TimeSeries/meta/TimeSeries.JPG \
		TimeSeries/samples \
		TimeSeries/src/test
