## Makefile.am -- Process this file with automake to produce Makefile.in

AM_CPPFLAGS		= -I$(top_srcdir)/include $(MINIZIPINC)

noinst_LTLIBRARIES	= libudmbase.la
libudmbase_la_SOURCES	= cint_string.cpp UdmBase.cpp UdmProject.cpp \
			  UmlExt.cpp DTDGen.cpp Project.cpp UdmStatic.cpp \
			  DTDGen.h UdmTomi.cpp UdmProject_xsd.h
