## Makefile.am -- Process this file with automake to produce Makefile.in

AM_CPPFLAGS		= -I$(top_srcdir)/include

noinst_LTLIBRARIES	= libudm_javaapigen.la
libudm_javaapigen_la_SOURCES	= ClassGen.cpp ClassGen.h FactoryGen.cpp \
				  FactoryGen.h JavaAPIGen.cpp JavaAPIGen.h \
				  Utils.cpp UtilsGen.cpp UtilsGen.h Utils.h
